--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/eslint-parser": "^7.24.5",
     "@babylonjs/core": "^7.10.3",
     "@element-plus/icons-vue": "^2.3.1",
+    "babylonjs": "^7.11.4",
     "element-plus": "2.1",
     "monaco-editor": "^0.49.0",
     "pinia": "^2.1.7",
