--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babylonjs/core": "^7.10.3",
     "@element-plus/icons-vue": "^2.3.1",
     "babylonjs": "^7.11.4",
+    "babylonjs-loaders": "^7.13.0",
     "element-plus": "2.1",
     "monaco-editor": "^0.49.0",
     "pinia": "^2.1.7",
