--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "babylonjs": "^7.11.4",
     "babylonjs-loaders": "^7.13.0",
     "element-plus": "2.1",
+    "gasp": "^0.0.2",
+    "gsap": "^3.12.5",
     "monaco-editor": "^0.49.0",
     "pinia": "^2.1.7",
     "three": "^0.165.0",
